--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ name = "pypi"
 [packages]
 dash = "*"
 pywebview = "*"
+beautifulsoup4 = "*"
+dash-bootstrap-components = "*"
 
 [dev-packages]
 autopep8 = "*"
